--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "avatar-downloader",
   "version": "1.0.0",
   "description": "Downloads the avatars of all contributors to user-specified GutHub repository",
-  "main": "main.js",
+  "main": "download_avatars.js",
   "dependencies": {
     "request": "^2.85.0"
   },
